# ds-service-status

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  login.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: cd.yml
app/: __init__.py
app/lib/: cache.py  context_processor.py  template_filters.py
app/lib/uptime_kuma_api/: __init__.py  api.py  docstrings.py  dto.py  monitor_type.py
app/main/: routes.py
app/static/: manifest.json
app/status/: __init__.py  routes.py
app/templates/: base.html
app/templates/errors/: page_not_found.html
app/templates/main/: index.html
app/templates/status/: details.html  index.html
app/templates/status/macros/: heartbeats_graph.html  incidents_list.html  incidents_table.html
src/scripts/: main.js
src/styles/: main.scss
test/lib/: test_template_filters.py
test/main/: test_routes.py
