[tool.poetry]
name = "tna-flask-application"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
requests = "^2.31.0"
flask-caching = "^2.1.0"
tna-frontend-jinja = "0.28.0"
flask-talisman = "^1.1.0"
markdown-it-py = "^3.0.0"
uptime-kuma-api = "^1.2.1"
sentry-sdk = {extras = ["flask"], version = "^2.36.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
